git register perdido
perdi los cambios referentes al /register por lo que lo volvi a hacer a mano
