# src/routes/Auth.Routes.js
@@ -4,6 +4,7 @@ export default ({ AuthController }) => {
   const router = Router();
 
   router.post('/login', (req, res) => AuthController.login(req, res));
+  router.post('/register', (req, res) => AuthController.register(req, res));
 
   return router;
 };
